# postmark-client

./: .gitignore  Cargo.toml  README.md
src/: attachment.rs  email.rs  error.rs  lib.rs  outbound_email_body.rs
tests/: core.rs
