[package]
name = "postmark-client"
description = "A postmark client in rust"
version = "0.1.0"
edition = "2021"
authors = ["Jimmie Lovell <jimmieomlovell@gmail.com>"]
license = "MIT"
homepage = "https://github.com/jimmielovell/ruts"
keywords = ["postmark", "email", "client", "watfoe"]
categories = ["network-programming"]
repository = "https://github.com/jimmielovell/postmark-client"
readme = "README.md"

[dependencies]
base64 = "0.22.1"
secrecy = "0.10.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
reqwest = { version = "0.12.12", features = ["json"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"]}
tracing = { version = "0.1.41", features = ["log"] }
once_cell = "1.20.2"
regex = "1.11.1"

[dev-dependencies]
claim = "0.5.0"
fake = "3.0.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
wiremock = "0.6.0"
mime_guess = "2.0.5"

[[test]]
name = "core"
path = "tests/core.rs"
